Refactor/dao testing (#97)
* EntradaDAO complete

* EventoDAO complete

* TicketDAO complete

* UsuarioDAO complete